--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/app-rate": "^4.5.3",
     "@ionic-native/core": "^4.3.1",
     "@ionic-native/in-app-browser": "^4.3.1",
     "@ionic-native/splash-screen": "^4.3.1",
@@ -31,6 +32,7 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.5.2",
+    "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-inappbrowser": "^1.7.1",
@@ -40,6 +42,7 @@
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.2",
     "ionic-angular": "3.9.2",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
@@ -71,7 +74,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-apprate": {}
     }
   }
 }
