--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "^6.2.3",
-    "cordova-ios": "^4.5.2",
+    "cordova-android": "7.0.0",
     "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-fcm": "~2.1.2",
     "cordova-plugin-inappbrowser": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.15",
@@ -45,6 +45,7 @@
     "ionic-angular": "3.9.2",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
+    "ios": "0.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -57,10 +58,7 @@
     "ionic_aot_write_to_disk": true
   },
   "cordova": {
-    "platforms": [
-      "android",
-      "ios"
-    ],
+    "platforms": [],
     "plugins": {
       "cordova-plugin-crosswalk-webview": {
         "XWALK_VERSION": "22+",
