--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic-native/core": "^4.3.1",
+    "@ionic-native/core": "^4.5.3",
+    "@ionic-native/geolocation": "^4.5.3",
+    "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.3.1",
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
@@ -32,14 +34,15 @@
     "@types/google-maps": "^3.2.0",
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.5.2",
-    "cordova-plugin-crosswalk-webview": "^2.3.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-inappbrowser": "^1.7.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.2",
-    "cordova-plugin-ionic-webview": "^1.1.15",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-plugin-crosswalk-webview": "^2.4.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -72,7 +75,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-geolocation": {}
     }
   }
 }
