--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "^4.5.3",
+    "@ionic-native/fcm": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.3.1",
@@ -32,28 +33,18 @@
     "@ionic-native/status-bar": "^4.3.1",
     "@ionic/storage": "2.1.3",
     "@types/google-maps": "^3.2.0",
-    "cordova-android": "^6.2.3",
-    "cordova-ios": "^4.5.2",
-    "cordova-plugin-crosswalk-webview": "^2.4.0",
-    "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-inappbrowser": "^1.7.2",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.4.1",
-    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-android": "7.0.0",
+    "cordova-ios": "^4.5.2",
     "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-fcm": "~2.1.2",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-inappbrowser": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.15",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
     "ionic-angular": "3.9.2",
     "ionic2-rating": "^1.2.2",
