--- a/package.json
+++ b/package.json
@@ -24,13 +24,11 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic-native/core": "^4.5.3",
+    "@ionic-native/core": "^4.3.1",
     "@ionic-native/fcm": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/app-rate": "^4.5.3",
-    "@ionic-native/core": "^4.3.1",
-    "@ionic-native/fcm": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.3.1",
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
@@ -38,7 +36,6 @@
     "@types/google-maps": "^3.2.0",
     "cordova-android": "7.0.0",
     "cordova-ios": "^4.5.2",
-    "cordova-android": "7.0.0",
     "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
@@ -66,7 +63,10 @@
     "ionic_aot_write_to_disk": true
   },
   "cordova": {
-    "platforms": [],
+    "platforms": [
+      "android",
+      "ios"
+    ],
     "plugins": {
       "cordova-plugin-crosswalk-webview": {
         "XWALK_VERSION": "22+",
