--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
-
+    "@ionic-native/app-rate": "^4.5.3",
     "@ionic-native/core": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
-    "@ionic-native/app-rate": "^4.5.3",
-
-
     "@ionic-native/in-app-browser": "^4.3.1",
+    "@ionic-native/native-geocoder": "^4.6.0",
     "@ionic-native/network": "^4.5.3",
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
@@ -40,18 +38,17 @@
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.5.2",
     "cordova-plugin-apprate": "^1.3.0",
-
     "cordova-plugin-crosswalk-webview": "^2.4.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativegeocoder": "^3.1.1",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
-
     "ionic-angular": "3.9.2",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
@@ -86,10 +83,10 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
-
       "cordova-plugin-apprate": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-nativegeocoder": {}
     }
   }
 }
