--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ionic/storage": "2.1.3",
     "@types/google-maps": "^3.2.0",
     "cordova-android": "7.0.0",
+    "cordova-android-support-gradle-release": "^1.3.0",
     "cordova-ios": "^4.5.2",
     "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-crosswalk-webview": "^2.4.0",
@@ -71,8 +72,8 @@
   },
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-crosswalk-webview": {
@@ -93,7 +94,10 @@
       "cordova-plugin-apprate": {},
       "cordova-plugin-fcm": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-nativegeocoder": {}
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "24.+"
+      }
     }
   }
 }
